Fix Icon alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,6 +83,8 @@ p {
         .fas, .fab {
             margin-right: 5px;
             font-size: 18px;
+            width: 1em;
+            text-align: right;
             vertical-align: middle;
         }
         li {
